--- a/public/index.html
+++ b/public/index.html
@@ -3,31 +3,22 @@
     <head>
         <title>Group X Chat</title>
         <meta name="viewport" content="width=device-width; initial-scale=1.0" />
-        <link href="messenger.css" rel="stylesheet" type="text/css">
         <link href="style.css" rel="stylesheet" type="text/css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="messaging.js"></script>
     </head>
     <body>
-        <div class="screen">
-            <div class="conversation">
-                <div class="messages messages--received">
-                    <div class="message">This codepen is an exemple of</div>
-                    <div class="message">how to create the Facebook thumb up</div>
-                </div>
-                <div class="messages messages--sent">
-                    <div class="message">Try to type</div>
-                    <div class="message">or click the thumb up!</div>
-                    <div class="message">;)</div>
-                </div>
-                <div class="messages messages--received">
-                    <div class="message">Enjoy!</div>
-                </div>
+        <div class="wrapper">
+            <div class="title">
+                <h1>Group $X Chat</h1>
             </div>
-            <div class="text-bar">
-                <form class="text-bar__field" id="form-message">
-                    <input type="text" placeholder="Type or thumb up ;)"/>
-                </form>
-                <div class="text-bar__thumb">
-                    <div class="thumb"></div>
+            <div class="messages" id="messages">
+                <div class="announcement">General discussion</div>
+            </div>
+            <div class="message-bar">
+                <input type="text" placeholder="Type a message..." />
+                <div class="send">
+                    <button id="sendMessage"></button>
                 </div>
             </div>
         </div>
